--- a/src/index.css
+++ b/src/index.css
@@ -23,5 +23,5 @@ code {
 
 .slick-prev:before,
 .slick-next:before {
-  color: rgb(0, 106, 255)!important;
+  color: rgb(16.1% 20% 32.2%)!important;
 }
