--- a/src/index.css
+++ b/src/index.css
@@ -28,4 +28,5 @@ code {
 .slick-prev:before,
 .slick-next:before {
   color: rgb(16.1% 20% 32.2%)!important;
+  font-size: 30px !important; /* Increase arrow size */
 }
